--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
+  "homepage": "https://jacobn88.github.io/Portfolio-React/",
   "name": "portfolio",
-  "homepage": "https://jacobn88.github.io/my-app",
-  "version": "0.1.0",
+    "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "bootstrap": "^4.5.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
